Fix whitespace

--- a/output/styles2.css
+++ b/output/styles2.css
@@ -4,24 +4,24 @@ html {
 }
 
 html.js .noscript {
-  display: none;
+	display: none;
 }
 
 /* Dead style */
 html:not(.js) .js-only {
-  display: none;
+	display: none;
 }
 
 header {
-  display: flex;
-  direction: row;
-  /* Push items as far apart as possible */
-  justify-content: space-between;
+	display: flex;
+	direction: row;
+	/* Push items as far apart as possible */
+	justify-content: space-between;
 }
 
 #headline {
-  text-align: center;
-  flex-grow: 1;
+	text-align: center;
+	flex-grow: 1;
 }
 
 #tbl_communities { width:100%; }
@@ -31,7 +31,7 @@ header {
 .td_identifier { display: none; font-family: monospace; }
 
 .td_language:empty::after {
-  content: "\2753";
+	content: "\2753";
 }
 
 #th_description  { }
@@ -49,55 +49,56 @@ header {
 .td_join_url     {
 	font-family: monospace;
 	white-space: nowrap;
+	font-size: .8em;
 }
 
 .join_url.nojs_mobile {
-  display: none;
+	display: none;
 }
 
 /* Apply margin against copy button. */
 html.js .join_url {
-  margin-right: 1em;
+	margin-right: 1em;
 }
 
-@media (max-width: 800px) {
-  .join_url {
-    display: none;
-  }
+@media (max-width: 850px) {
+	.join_url {
+		display: none;
+	}
 
-  /* Show backup link only when button is not available. */
-  html:not(.js) .join_url.nojs_mobile {
-    display: inline;
-  }
+	/* Show backup link only when button is not available. */
+	html:not(.js) .join_url.nojs_mobile {
+		display: inline;
+	}
 }
 
 .join_url_container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .copy_button     { font-size: inherit }
 
 footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	text-align: center;
 }
 
 footer p {
-  width: 75%;
-  margin: .5em;
-  text-align: center;
+	width: 75%;
+	margin: .5em;
+	text-align: center;
 }
 
 footer nav a {
-  display: inline-block;
-  margin: .25em;
-  white-space: nowrap;
+	display: inline-block;
+	margin: .25em;
+	white-space: nowrap;
 }
 
 /* <Colors> */
